--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-logger": "0.0.3",
     "mongoose": "^4.3.4",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "validator": "^4.5.0"
   }
 }
