--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "crypto": "0.0.3",
@@ -13,9 +14,11 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-logger": "0.0.3",
+    "express-session": "^1.12.1",
     "mongoose": "^4.3.4",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
+    "session-mongoose": "^0.5.2",
     "validator": "^4.5.0"
   }
 }
