Card posting (and set id as number), Card getting

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-logger": "0.0.3",
     "express-session": "^1.12.1",
     "mongoose": "^4.3.4",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "session-mongoose": "^0.5.2",
