--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^1.5.2",
+    "aws-sdk": "^2.2.28",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "crypto": "0.0.3",
@@ -15,6 +16,7 @@
     "express": "~4.13.1",
     "express-logger": "0.0.3",
     "express-session": "^1.12.1",
+    "formidable": "^1.0.17",
     "mongoose": "^4.3.4",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.6.1",
